[gd_scene load_steps=5 format=2]

[ext_resource path="res://ui/games/race_overlay.gd" type="Script" id=1]
[ext_resource path="res://ui/components/big_font.res" type="DynamicFont" id=2]

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("best:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("best:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=1]
resource_name = "new_best"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("best:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("best:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1.56917, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="race_overlay" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Panel" type="PanelContainer" parent="."]
anchor_top = 0.775
anchor_bottom = 0.775
margin_left = 28.0
margin_top = -51.0
margin_right = 196.0
margin_bottom = 65.0

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 161.0
margin_bottom = 109.0
custom_constants/margin_right = 10
custom_constants/margin_top = 20
custom_constants/margin_left = 10
custom_constants/margin_bottom = 20

[node name="GridContainer" type="GridContainer" parent="Panel/MarginContainer"]
margin_left = 10.0
margin_top = 20.0
margin_right = 144.0
margin_bottom = 82.0
custom_constants/vseparation = 10
custom_constants/hseparation = 8
columns = 2

[node name="LabelGold" type="Label" parent="Panel/MarginContainer/GridContainer"]
margin_right = 45.0
margin_bottom = 14.0
text = "Gold"

[node name="Gold" type="Label" parent="Panel/MarginContainer/GridContainer"]
margin_left = 53.0
margin_right = 134.0
margin_bottom = 14.0
text = "Gold time"

[node name="LabelSilver" type="Label" parent="Panel/MarginContainer/GridContainer"]
margin_top = 24.0
margin_right = 45.0
margin_bottom = 38.0
text = "Silver"

[node name="Silver" type="Label" parent="Panel/MarginContainer/GridContainer"]
margin_left = 53.0
margin_top = 24.0
margin_right = 134.0
margin_bottom = 38.0
text = "Silver Time"

[node name="LabelBronze" type="Label" parent="Panel/MarginContainer/GridContainer"]
margin_top = 48.0
margin_right = 45.0
margin_bottom = 62.0
text = "Bronze"

[node name="Bronze" type="Label" parent="Panel/MarginContainer/GridContainer"]
margin_left = 53.0
margin_top = 48.0
margin_right = 134.0
margin_bottom = 62.0
text = "Bronze Time"

[node name="LabelBest" type="Label" parent="Panel/MarginContainer/GridContainer"]
visible = false
margin_top = 72.0
margin_right = 45.0
margin_bottom = 86.0
text = "Best"

[node name="Best" type="Label" parent="Panel/MarginContainer/GridContainer"]
visible = false
margin_top = 72.0
margin_right = 45.0
margin_bottom = 86.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 2 )
anims/new_best = SubResource( 1 )

[node name="best" type="Label" parent="."]
visible = false
anchor_right = 1.0
margin_top = 68.0
margin_bottom = 112.0
custom_fonts/font = ExtResource( 2 )
text = "New Best! XX"
align = 1
